test-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        run: test
    spec:
      containers:
      - name: test
        image: sharor/hello-world:1.0.0
        ports:
        - containerPort: 5000
