test-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  ports:
    - port: 80
    targetPort: 5000
  selector:
    run: test-deploy
  type: ClusterIP
